<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--<string name="app_name">event4us</string>-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_inactive_projects">Completed Activities</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_server_config">Server Config</string>
    <string name="title_activity_show_shared_files">Shared Files</string>
    <string name="title_activity_project_location">Location</string>
    <string name="title_show_single_activity">Activity</string>
    <string name="title_show_active_activities">Agenda</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">My match</string>
    <string name="title_activity_contact_details">Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="settings"><u>Settings</u></string>
    <string name="social_login"><u>Social Login?</u></string>
    <string name="title_activity_test_event_detail">Event Details</string>
    <string name="title_activity_test_entry_screen">TestEntryScreen</string>
    <string name="title_activity_contact_list">All Friends</string>
    <string name="facebook_app_id">1499890446976093</string>

    <string name="title_activity_activity_notifications">Notifications</string>
    <string name="title_activity_activity_chats">Chats</string>
    <string name="title_activity_activity_register">Register</string>
    <string name="title_activity_activity_forgot_password">Forgot Password?</string>
    <string name="termsconditions"><u>Terms and Conditions</u></string>
    <string name="privacypolicy"><u>Privacy Policy</u></string>
    <string name="title_activity_activity_event_likers">Event Likers</string>
    <string name="title_activity_activity_event_buddies">Event Buddies</string>
    <string name="title_activity_activity_event_organizers">Event Organizers</string>
    <string name="title_activity_activity_event_details">Event Details</string>
    <string name="title_activity_activity_join_event">Join Event</string>
    <string name="title_activity_activity_person_events">Person Events</string>
    <string name="title_activity_activity_person_groups">Person Groups</string>
    <string name="title_activity_activity_group_details">Group Details</string>
    <string name="title_activity_activity_common_groups">Common Groups</string>
    <string name="title_activity_activity_common_friends">Common Friends</string>
    <string name="title_activity_activity_person_details">Person Details</string>
    <string name="title_activity_activity_add_friend">Add Friend</string>
    <string name="title_activity_event_photos">Event Photos</string>
    <string name="title_activity_event_comments">Event Comments</string>
    <string name="title_activity_group_members">Group Members</string>
    <string name="eventtitle">Event Title</string>
    <string name="title_activity_my_profile">My Profile</string>

    <string name="title_activity_create_group">Create Group</string>
    <string name="title_activity_event_groups_buddies">Groups &amp; Buddies</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_all_buddies">All Buddies</string>
    <string name="title_activity_common_events">Common Events</string>
    <string name="title_activity_search_event">Search</string>
    <string name="title_activity_all_groups">All Groups</string>
    <string name="title_activity_group_details">Group Details</string>
    <string name="title_activity_join_group">Join Group</string>

    <string name="title_activity_all_events">All Events</string>

    <string name="eventbuddy_left">event</string>
    <string name="eventbuddy_right">buddy</string>
    <string name="signin">sign in</string>
    <string name="register_bold"><u>Register</u></string>
    <string name="forgotpassword_bold"><u>Forgot Password?</u></string>
    <string name="email">email</string>
    <string name="password">password</string>

    <string name="dashboard_title">Activity Platform App</string>
    <string name="dashboard_tab_events">Events</string>
    <string name="dashboard_tab_buddies">Buddies</string>
    <string name="dashboard_tab_topics">Topics</string>
    <string name="dashboard_tab_posts">Posts</string>
    <string name="groupdetails_tab_upcoming">Upcoming</string>
    <string name="groupdetails_tab_past">Past Events</string>

    <string name="viewallevents">view all events</string>
    <string name="join">join</string>
    <string name="introduction">Introduction</string>
    <string name="viewdetails">view details</string>
    <string name="viewposts">view posts</string>
    <string name="organizer">Event Organizer</string>
    <string name="viewmyevents">view my events</string>

    <string name="venue">Venue</string>
    <string name="datentime">Date &amp; Time</string>
    <string name="personal_contact_confirm">Personal Contact Confirmation</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="mail_address">Mail Address</string>
    <string name="post">Post</string>

    <string name="msg_login">Login in progress</string>
    <string name="msg_login_via_facebook">Login via Facebook in progress</string>
    <string name="msg_downloading_events">Downloading events</string>
    <string name="msg_downloading_posts">Downloading posts</string>
    <string name="msg_downloading_users">Downloading users</string>
    <string name="msg_pls_wait">Please wait...</string>
    <string name="msg_info">Info</string>
    <string name="msg_ok">OK</string>
    <string name="msg_login_success">Login success.</string>
    <string name="msg_login_fail">Login fail, please check password and try again.</string>
    <string name="msg_downloading_event">Downloading event.</string>
    <string name="msg_downloading_topic">Downloading topic.</string>
    <string name="msg_downloading_post">Downloading post.</string>
    <string name="msg_post_success">Post success.</string>
    <string name="msg_post_fail">Post fail, please try again later.</string>
    <string name="msg_joinevent_success">Join success.</string>
    <string name="msg_network_error">Network error, please try again later.</string>
    <string name="msg_image_too_large">Image is too large.</string>

    <string name="userprofile_tab_profile">Profile</string>
    <string name="userprofile_tab_groups">Groups</string>
    <string name="userprofile_tab_events">Events</string>
    <string name="userprofile_hometown">Home Town</string>
    <string name="userprofile_biography">Biography</string>
    <string name="userprofile_interests">Interests</string>
    <string name="userprofile_friends">Friends</string>

    <string name="title_activity_add_post">Add Post</string>
    <string name="title_activity_my_buddies">My Buddies</string>
    <string name="title_activity_topic_details">Topic Details</string>
    <string name="title_activity_event_posts">Event Posts</string>
    <string name="title_activity_create_event">Create Event</string>

    <string name="menu_myprofile">My Profile</string>
    <string name="menu_myevents">My Events</string>

    <string name="event_category_all">all</string>
    <string name="event_category_new">new</string>
    <string name="event_category_hot">hot</string>
    <string name="event_category_special">special</string>
    <string name="event_category_art">art</string>
    <string name="event_category_sport">sport</string>
    <string name="event_category_Chinese">Chinese</string>
    <string name="event_category_business">business</string>
    <string name="event_category_games">games</string>
    <string name="event_category_social">social</string>
    <string name="event_category_language">languages</string>

    <string name="related_events">Related Events</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="title_activity_topic_events">Topic Events</string>
    <string name="title_activity_topic_posts">Topic Posts</string>
    <string name="title_activity_create_topic">Create Topic</string>
    <string name="title_activity_event_paypal">Paypal</string>

    <string name="product_name">Activity Platform App</string>

</resources>