<LinearLayout
    android:id="@+id/master"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        style="@style/Font.Popup.Me"
        android:text="@string/menu_myprofile"
        android:id="@+id/popup_profile" />

    <TextView
        style="@style/Font.Popup.Me"
        android:text="@string/menu_myevents"
        android:id="@+id/popup_myevents" />

    <TextView
        style="@style/Font.Popup.Me"
        android:text="@string/title_activity_my_buddies"
        android:id="@+id/popup_mybuddies" />

    <TextView
        style="@style/Font.Popup.Me"
        android:text="All Groups"
        android:id="@+id/popup_allgroups" />

</LinearLayout>

