<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/allevents">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.soco.SoCoClient.events.allevents.AllEventsActivity"
        android:padding="5dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="myevents"
            android:id="@+id/myeventsarea">
            <TextView
                android:id="@+id/allEvents"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/event_category_all"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="6dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/businessEvents"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/event_category_business"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="6dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/gamesEvents"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/event_category_games"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="6dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/socialEvents"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/event_category_social"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="6dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/languageEvents"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/event_category_language"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:padding="6dp"
                android:gravity="center" />
        </LinearLayout>

        <com.soco.SoCoClient.common.ui.SwipeRefreshLayoutBottom
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.soco.SoCoClient.common.ui.SwipeRefreshLayoutBottom>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/fab"
        app:layout_anchor="@id/list"
        app:layout_anchorGravity="bottom|right"
        android:clickable="true"
        android:onClick="createevent"/>

</android.support.design.widget.CoordinatorLayout>