<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="myevents"
        android:id="@+id/myeventsarea">
        <TextView
            android:id="@+id/newEvents"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/event_category_new"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="6dp"
            android:gravity="center" />
        <TextView
            android:id="@+id/hotEvents"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/event_category_hot"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="6dp"
            android:gravity="center" />
        <TextView
            android:id="@+id/specialEvents"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:text="@string/event_category_special"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="6dp"
            android:gravity="center" />
    </LinearLayout>

    <com.soco.SoCoClient.common.ui.SwipeRefreshLayoutBottom
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.soco.SoCoClient.common.ui.SwipeRefreshLayoutBottom>

</LinearLayout>