<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/master"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#ffffb73f">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/actionbar_close"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:onClick="close"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#ffffb73f"
            android:id="@+id/titlearea">
            <TextView
                android:id="@+id/textTitle"
                style="@android:style/TextAppearance.Large.Inverse"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:id="@+id/datetimelocation"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:id="@+id/address" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/textStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/textStartDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:id="@+id/textStartEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_gravity="center_horizontal"
            android:id="@+id/buddies"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:id="@+id/eventbuddies">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:gravity="left"
            android:id="@+id/introductionarea"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduction"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5pt"
                android:maxLines="4" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/viewdetails"
                android:clickable="true"
                android:onClick="eventIntro"
                android:textColor="@android:color/holo_blue_dark"
                android:gravity="center_horizontal"
                android:paddingTop="3dp"
                android:paddingBottom="3dp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/eventorganizer"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organizer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/organizers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5pt">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/eventgroups_group1"
                    android:id="@+id/creator_icon"
                    android:clickable="false"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/creator_name"
                    android:text=""
                    android:paddingLeft="5dp"
                    android:onClick="eventorganizers"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/socialbuttons"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/likeevent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="19sp"
                    android:background="@drawable/eventcategory_box"
                    android:text="0"
                    android:drawableLeft="@drawable/eventcard_like_selector"
                    android:paddingLeft="25dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:enabled="true"
                    android:onClick="likeevent"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/join"
                    android:textSize="19sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:background="@drawable/eventcategory_box"
                    android:textStyle="bold"
                    android:onClick="joinevent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/post"
                    android:textSize="19sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:background="@drawable/eventcategory_box"
                    android:textStyle="bold"
                    android:onClick="post"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

